<resources>
    <string name="app_name">Walmart</string>
    <string name="sitya_text">Sign in to your account</string>
    <string name="email_req">E-mail address (required)</string>
    <string name="hint_emailbox">Your E-mail</string>
    <string name="logo_description">walmart logo</string>
    <string name="passReq">Password (required)</string>
    <string name="hint_passwordBox">Your password</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="btn_signIn">Sign In</string>
    <string name="tv_dontHaveAnAcc">Don\'t have an account?</string>
    <string name="btn_createAcc">Create a new account</string>
    <string name="shoppingCatEmail">hello@gmail.com</string>
    <string name="shopCatWelcome">Welcome</string>
    <string name="shopCatShopByCat">Shop By Categories</string>
    <string name="SBCelectronics">Electronics</string>
    <string name="SBCclothing">Clothing</string>
    <string name="SBCbeauty">Beauty</string>
    <string name="SBCfood">Food</string>
    <string name="electronicsCD">electronics image button</string>
    <string name="clothingCD">clothing image button</string>
    <string name="beautyCD">beauty image button</string>
    <string name="foodCD">food image button</string>
    <string name="createAcc_text">Create your account</string>
    <string name="reqFields">* required fields</string>
    <string name="firstName">First name*</string>
    <string name="lastName">Last Name*</string>
    <string name="firstNameHint">First name...</string>
    <string name="lastNameHint">Last name...</string>
    <string name="emailTV">E-mail Address*</string>
    <string name="emailHint">E-mail address...</string>
    <string name="passwordTV">Password*</string>
    <string name="passwordHint">Password...</string>
    <string name="createAccButton">Create Account</string>
</resources>