<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/activity_main_iv_walmart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart_logo" />

    <TextView
        android:id="@+id/activity_main_tv_sitya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sitya_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_iv_walmart" />

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_main_cardView"
        android:layout_width="370dp"
        android:layout_height="500dp"
        android:layout_gravity="fill"
        android:layout_marginTop="20dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_sitya"
        app:layout_constraintVertical_bias="0.120000005">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/activity_main_tv_emailReq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/email_req"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/activity_main_et_mailbox4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_emailbox"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_emailReq2" />

            <TextView
                android:id="@+id/activity_main_tv_passwordReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/passReq"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_et_mailbox4" />

            <EditText
                android:id="@+id/activity_main_et_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_passwordBox"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_passwordReq" />

            <TextView
                android:id="@+id/activity_main_tv_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="all"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgotPass"
                android:textColor="#1976D2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.768"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_et_password"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/activity_main_ll_dontHaveAnAccount"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_bt_signIn"
                app:layout_constraintVertical_bias="0.19">

                <View
                    android:id="@+id/activity_main_ll_view1"
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/activity_main_tv_dontHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tv_dontHaveAnAcc"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/activity_main_ll_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1.2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/activity_main_bt_signIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_color_walmart_blue"
                android:text="@string/btn_signIn"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_forgotPass"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/activity_main_bt_createAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:backgroundTint="@color/white"
                android:text="@string/btn_createAcc"
                android:textAllCaps="false"
                android:textColor="#1976D2"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>